# fastapi_pokedex_api

./: .gitignore  pyproject.toml  setup.cfg
fastapi_pokedex_api/: api_app.py  pokeapi_requests.py  pokedex_schema.py  run.py
tests/: get_pokedata_test.py  pikachu_data_test.py
